CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT("authentication-results" VERSION 1.0.0)

IF (EXISTS "${CMAKE_CURRENT_BINARY_DIR}/CPACK_GENERATOR.txt")
	FILE(STRINGS ${CMAKE_CURRENT_BINARY_DIR}/CPACK_GENERATOR.txt CPACK_GENERATOR)
ELSE()
	MESSAGE(FATAL_ERROR "Missing CPACK_GENERATOR")
ENDIF()

SET(CMAKE_INSTALL_PREFIX "/opt/halon")
SET(CPACK_PACKAGING_INSTALL_PREFIX "/opt/halon")

INSTALL(FILES "LICENSE" DESTINATION "share/doc/plugins/hsl/${PROJECT_NAME}")
INSTALL(FILES "authentication-results.hsl" DESTINATION "plugins/hsl/${PROJECT_NAME}")
INSTALL(FILES "main.hsl" DESTINATION "plugins/hsl/${PROJECT_NAME}")

IF (CPACK_GENERATOR MATCHES "DEB")
	SET(CPACK_DEBIAN_PACKAGE_DEPENDS "halon (>= 5.10), halon-extras-dmarc")
ENDIF()
IF (CPACK_GENERATOR MATCHES "RPM")
	SET(CPACK_RPM_PACKAGE_REQUIRES "halon >= 5.10, halon-extras-dmarc")
ENDIF()

SET(CPACK_PACKAGE_NAME "halon-extras-${PROJECT_NAME}")
SET(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Halon extras Authentication-Results")
SET(CPACK_PACKAGE_DESCRIPTION "Halon extras Authentication-Results")
SET(CPACK_PACKAGE_CONTACT "Halon support@halon.io")
SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${PROJECT_VERSION}")

SET(CPACK_DEBIAN_PACKAGE_SECTION "mail")

INCLUDE(CPack)
